src/test/deca/syntax/lexer/invalid/created/include/wrong/include1.deca
// Description:
//    tests de programme lexicalement correct.
//    wrong #include
//
// Resultats:
//    include1.deca:10:0: token recognition error at: '#p'


#pasinclude